--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,8 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.2/schema.json",
+  "files": {
+    "ignore": ["node_modules", "public", ".next"]
+  },
   "organizeImports": {
     "enabled": true
   },
